gcc/testsuite/rust/rustc/ui/feature-gate-inline_const.rs
fn main() {
    let _ = const {
// { dg-error ".E0658." "" { target *-*-* } .-1 }
        true
    };
}

